# Autono

./: .env  .gitignore  CITATION.cff  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
autono/: __init__.py
autono/ability/: __init__.py  ability.py  agentic_ability.py  mcp_ability.py  mcp_agentic_ability.py
autono/brain/: agent.py  base_agent.py  mcp_agent.py  memory_augment.py
autono/message/: __init__.py  after_action_taken_message.py  all_done_message.py  before_action_taken_message.py
autono/prompt/: analyser_prompt.py  docstring_prompt.py  executor_prompt.py  introspection_prompt.py  next_move_prompt.py  request_resolver_prompt.py  scheduler_prompt.py  self_introduce.py
autono/util/: ability.py  agentic.py
ceo/: __init__.py
ceo/ability/: __init__.py  ability.py  agentic_ability.py  base_ability.py  base_mcp_ability.py  mcp_ability.py  mcp_agentic_ability.py  stdio_mcp_ability.py
ceo/brain/: agent.py  base_agent.py  mcp_agent.py  stdio_mcp_agent.py
ceo/exception/: invalid_mcp_tool_exception.py  not_a_regular_function_exception.py
ceo/message/: __init__.py  after_action_taken_message.py  after_execution_message.py  all_done_message.py  base_massage.py  before_action_taken_message.py  next_move_message.py
ceo/prompt/: prompt.py  (+3 more)
data/: __init__.py  next_move_dataset.jsonl
demo/: math_calc_and_file_access.py  math_calc_and_file_access_tts_enhanced.py  mcp_agent.py  multi_agent.py  single_agent.py  speakable_agent.py
eval/: gaia_benchmark.ipynb  gaia_benchmark.py
i18n/: README_ja-jp.md  README_zh-hans.md  README_zh-hant.md
(+21 files in other folders)
